# pyjams

./: .env.example  .flake8  .gitignore  Procfile  README.md  app.json  create_playlist.html  gunicorn.conf  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: test_django.yml
docs/: dns.md  server-config.md
pyjams/: apps.py  auth.py  decorators.py  middleware.py  models.py  settings.py  tests.py  urls.py  validators.py  views.py  wsgi.py
pyjams/migrations/: 0001_initial.py  0002_user_spotify_email.py  0003_remove_user_spotify_access_token_and_more.py  0004_user_spotify_username.py  0005_alter_featuredplaylist_options_and_more.py  0006_alter_featuredplaylist_featured_type.py  0007_alter_featuredplaylist_options_and_more.py
pyjams/static/css/: styles.css  theme.css
pyjams/static/js/: main.js  playlists.js  search.js
pyjams/templates/: base.html  index.html  login.html  manage_playlists.html  manage_spotify.html  playlist.html  playlists.html  privacy.html  profile.html  search.html  terms.html
pyjams/templates/components/: footer.html  header.html  manager_list.html  notification.html  notifications.html  playlist_card.html  search.html  search_modal.html  search_results.html  track_modal.html
pyjams/templates/modals/: create_playlist.html  manager_modal.html
pyjams/urls/: app_urls.py
pyjams/utils/: __init__.py  handlers.py  messages.py  spotify.py  templates.py
src/pyjams/: __init__.py  __main__.py  app.py  auth.py  models.py
src/pyjams/routes/: admin.py  api.py  auth.py  playlist.py
src/pyjams/static/: style.css
src/pyjams/static/css/: admin.css  playlist.css  styles.css
src/pyjams/static/js/: main.js  search.js
src/pyjams/templates/: admin.html  admin_playlists.html  base.html  error.html  index.html  login.html  playlist.html  playlist_card.html  playlist_ids.html  privacy.html  search.html
src/pyjams/templates/components/: notification.html  playlist_card.html
src/pyjams/templates/modals/: playlist_manager.html
src/pyjams/utils/: decorators.py  templates.py
tests/: conftest.py  test_basic.py  test_spotify_utils.py
