[project]
authors = [
  {name = "Austin Hovland", email = "austin@sansterbioanalytics.com"},
]
dependencies = [
  "fastapi>=0.110.0",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.16",
  "uvicorn>=0.27.1",
  "jinja2>=3.1.3",
  "spotipy>=2.24.0",
  "python-jose[cryptography]>=3.3.0",
  "python-dotenv>=1.0.1",
  "itsdangerous>=2.2.0",
  "pydantic-settings>=2.7.0",
  "psycopg2-binary>=2.9.10",
  "gunicorn>=23.0.0",
  "whitenoise>=6.6.0",
]
description = "Add your description here"
name = "pyjams"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
pyjams = "pyjams.main:start"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "invoke>=2.2.0",
  "mypy>=1.13.0",
  "pytest-xdist>=3.6.1",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "ruff>=0.8.4",
  "uv>=0.5.10",
]

[tool.pytest.ini_options]
addopts = """
    -n auto
    --color=yes
"""
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = [
  "unit: marks tests as unit tests",
  "ci: marks tests as continuous integration tests",
  "slow: marks tests as slow",
]

[tool.ruff]
ignore = [
  "D", # ignore all docstring rules
]
line-length = 120
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "RUF", # ruff-specific
  "PTH", # use pathlib
  "SIM", # simplify
  "TID", # tidy imports
]
target-version = "py312"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "ANN", # ignore type annotations in tests
  "S101", # ignore assert statements in tests
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["pyjams"]

[tool.poetry.dependencies]
flask-sqlalchemy = "^3.1.1"
