[project]
name = "pyjams"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.4",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "pip>=24.3.1",
    "psycopg[binary]>=3.2.3 ; sys_platform != 'linux'",
    "psycopg[c]>=3.2.3 ; sys_platform == 'linux'",
    "spotipy>=2.24.0",
    "uv>=0.5.11",
    "whitenoise[brotli]>=6.8.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "invoke>=2.2.0",
  "mypy>=1.13.0",
  "pytest-xdist>=3.6.1",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "ruff>=0.8.4",
  "uv>=0.5.10",
]

[tool.pytest.ini_options]
addopts = """
    -n auto
    --color=yes
"""
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = [
  "unit: marks tests as unit tests",
  "ci: marks tests as continuous integration tests",
  "slow: marks tests as slow",
]

[tool.ruff]
ignore = [
  "D", # ignore all docstring rules
]
line-length = 120
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "RUF", # ruff-specific
  "PTH", # use pathlib
  "SIM", # simplify
  "TID", # tidy imports
]
target-version = "py312"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "ANN", # ignore type annotations in tests
  "S101", # ignore assert statements in tests
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["pyjams"]
